--- a/mysite/temper/templates/header.html
+++ b/mysite/temper/templates/header.html
@@ -5,7 +5,7 @@
   </head>
   <body>
   <div align="center">
-      <form method="post" action="" target="_blank">
+      <form method="post" action="\search\" target="_blank">
      <label for = "ID">ID：</label>
           <input id = 'ID' type = "text" name="ID" style="width:250px" list="idList"  required />
      <datalist id="idList">
