--- a/mysite/temper/templates/index.html
+++ b/mysite/temper/templates/index.html
@@ -7,11 +7,11 @@
   <body>
     <h1 align="center">Welcome</h1>
     <div align="center">
-	<form method="post" action = "/login" >
+	<form action="/login/" method=post >
 		<table>
 			<tr>
 				<td><label for = id_username>用户名：</label></td>
-				<td><input id = 'id_username' type = "test" name = "userName"  required/></td>
+				<td><input id = 'id_username' type = "text" name = "userName"  required/></td>
 			</tr>
 			<tr>
 				<td><label for = id_password>密码：</label></td>
