--- a/mysite/temper/templates/login.html
+++ b/mysite/temper/templates/login.html
@@ -3,8 +3,8 @@
   <head>
       <meta charset = "utf-8">
     <title>首页</title>
-      {% include head.html %}
-      {% include footer.html %}
+      {% include "header.html" %}
+      {% include "footer.html" %}
   </head>
   <body>
   </body>
