--- a/mysite/temper/templates/header.html
+++ b/mysite/temper/templates/header.html
@@ -7,9 +7,9 @@
   <div align="center">
       <form method="post" action="\search\" target="_blank">
      <label for = "ID">ID：</label>
-          <input id = 'ID' type = "text" name="ID" style="width:250px" list="idList"  required />
+          <input id = 'ID' type = "text" name="ID" style="width:250px" list="idList"   placeholder="(选填)"/>
      <datalist id="idList">
-       <option value="A111">目前唯一可用ID</option>
+       <!--<option value="A111">目前唯一可用ID</option>-->
      </datalist>
      <label for="startDate">开始日期：</label>
      <input id="startDate" type = "date" name = "startDate" style="width:250px" required />
