--- a/mysite/temper/templates/login.html
+++ b/mysite/temper/templates/login.html
@@ -4,6 +4,7 @@
       <meta charset = "utf-8">
     <title>首页</title>
       {% include "header.html" %}
+      {% include "home.html"%}
       {% include "footer.html" %}
   </head>
   <body>
