--- a/mysite/temper/templates/search_page.html
+++ b/mysite/temper/templates/search_page.html
@@ -123,5 +123,6 @@
       <td>{{ line.name }}</td>
       </tr>
   {% endfor %}
+  <footer><div align="center">{{ link }}</div> </footer>
   </table>
-</body>
+
