--- a/mysite/temper/templates/header.html
+++ b/mysite/temper/templates/header.html
@@ -5,7 +5,7 @@
   </head>
   <body>
   <div align="center">
-      <form method="post" action="\search\" target="_blank">
+      <form method="get" action="\search" target="_blank">
           <table style= "">
               <tr>
                   <td><label for="startDate">开始日期：</label></td>
