--- a/mysite/temper/templates/index.html
+++ b/mysite/temper/templates/index.html
@@ -8,6 +8,7 @@
     <h1 align="center">Welcome</h1>
     <div align="center">
 	<form action="/login/" method=post >
+        {% csrf_token %}
 		<table>
 			<tr>
 				<td><label for = id_username>用户名：</label></td>
