--- a/mysite/temper/templates/search_page.html
+++ b/mysite/temper/templates/search_page.html
@@ -14,20 +14,20 @@
   <body>
   <table>
   <tr>
-    <td>时间</td>
-    <td>温度一</td>
-    <td>温度二</td>
-    <td>温度三</td>
-    <td>温度四</td>
-    <td>温度五</td>
-    <td>温度六</td>
-    <td>温度七</td>
-    <td>温度八</td>
+      <td>时间</td>
+      <td>温度一</td>
+      <td>温度二</td>
+      <td>温度三</td>
+      <td>温度四</td>
+      <td>温度五</td>
+      <td>温度六</td>
+      <td>温度七</td>
+      <td>温度八</td>
       <td>端口名</td>
   </tr>
   {% for line in result %}
       <tr>
-      <td> {{ line.time }}</td>
+      <td> {{ line.time | date:"Y年m月d日 H:i:s"}}</td>
 
       {% if line.T1 %}
           {%if line.T1 < upTemper %}
