--- a/mysite/temper/templates/header.html
+++ b/mysite/temper/templates/header.html
@@ -5,20 +5,27 @@
   </head>
   <body>
   <div align="center">
-      <form method="post" action="\search\" target="_blank">
-     <label for = "ID">ID：</label>
-          <input id = 'ID' type = "text" name="ID" style="width:250px" list="idList"   placeholder="(选填)"/>
-     <datalist id="idList">
-       <!--<option value="A111">目前唯一可用ID</option>-->
-     </datalist>
-     <label for="startDate">开始日期：</label>
-     <input id="startDate" type = "date" name = "startDate" style="width:250px" required />
-     <label for="endDate">截至日期：</label>
-     <input id="endDate" type="date" name="endDate" style="width:250px" required/>
-     <label for="upTemper">上限温度</label>
-     <input id="upTemper" type="text" name="upTemper" style="width:250px" placeholder="(选填)">
-     <input type ="submit" value = "搜索"  style="height:30px"/>
-   </form>
- </div>
+      <form method="get" action="\search_page\1" target="_blank">
+          <table style= "">
+              <tr>
+                  <td><label for="startDate">开始日期：</label></td>
+                  <td><input id="startDate" type = "date" name = "startDate" style="width:250px" required /></td>
+                  <td><label for="endDate">截至日期：</label></td>
+                  <td><input id="endDate" type="date" name="endDate" style="width:250px" required/></td>
+              </tr>
+              <tr>
+                  <td><label for = "ID">端口号：</label></td>
+                  <td><input id = 'ID' type = "text" name="ID" style="width:250px" list="idList"   placeholder="(选填)"/></td>
+                  <datalist id="idList">
+                      <option value="0548">测试用端口号</option>
+                  </datalist>
+                  <td><label for="upTemper">警告温度：</label></td>
+                  <td><input id="upTemper" type="text" name="upTemper" style="width:250px" placeholder="(选填)"></td>
+              </tr>
+              </table>
+            <div align="center"><input type ="submit" value = "搜索"  style="height:30px;width:200px;"/></div>
+
+      </form>
+  </div>
 </body>
 </html>
