--- a/mysite/temper/templates/search_page.html
+++ b/mysite/temper/templates/search_page.html
@@ -14,15 +14,15 @@
   <body>
   <table>
   <tr>
-    <td>时间</td>
-    <td>温度一</td>
-    <td>温度二</td>
-    <td>温度三</td>
-    <td>温度四</td>
-    <td>温度五</td>
-    <td>温度六</td>
-    <td>温度七</td>
-    <td>温度八</td>
+      <td>时间</td>
+      <td>温度一</td>
+      <td>温度二</td>
+      <td>温度三</td>
+      <td>温度四</td>
+      <td>温度五</td>
+      <td>温度六</td>
+      <td>温度七</td>
+      <td>温度八</td>
       <td>端口名</td>
   </tr>
   {% for line in result %}
@@ -123,5 +123,17 @@
       <td>{{ line.name }}</td>
       </tr>
   {% endfor %}
+  <footer><div align="center">{{ link }}</div> </footer>
   </table>
-</body>
+  <div align="center"><footer >第
+  {% for link in links %}
+      {% ifequal page_num forloop.counter %}
+          {{ forloop.counter }}
+      {% else %}
+        <a href="{{ link }}">{{ forloop.counter }} </a>
+      {% endifequal %}
+  {% endfor %}页
+  </footer></div>
+  </body>
+</html>
+
