--- a/mysite/temper/templates/header.html
+++ b/mysite/temper/templates/header.html
@@ -9,9 +9,9 @@
           <table style= "">
               <tr>
                   <td><label for="startDate">开始日期：</label></td>
-                  <td><input id="startDate" type = "date" name = "startDate" style="width:250px" required /></td>
+                  <td><input id="startDate" type = "date" name = "startDate" placeholder="yyyy-mm-dd" style="width:250px" required /></td>
                   <td><label for="endDate">截至日期：</label></td>
-                  <td><input id="endDate" type="date" name="endDate" style="width:250px" required/></td>
+                  <td><input id="endDate" type="date" name="endDate" placeholder="yyyy-mm-dd" style="width:250px" required/></td>
               </tr>
               <tr>
                   <td><label for = "ID">端口号：</label></td>
